--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 <body>
+
     <header id = "header">
         <i class="fas fa-paw"style="font-size:40px"></i>
         <h1> PAWMODORO </h1>
@@ -20,6 +21,11 @@
             <button id="login-btn"> Login </button>
         </nav>
     </header>
+    <div class="container"> </div>
+     <div id="time">
+        <h2 id="minutes">30:00</h2>
+      </div>
+
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
