created login files

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,16 +15,20 @@
         <img id="header-img"> 
         <nav id="nav-bar"> 
             <ul> 
-                <li> <a href="#" class="nav-link"> Tasks </a> </li>
                 <li> <a href="insights.html" class="nav-link"> Insights </a> </li>
             </ul>
-            <button id="login-btn"> Login </button>
+            <button id="login-btn"> <p> Login </p> </button>
         </nav>
     </header>
-    <div class="container"> </div>
-     <div id="time">
-        <h2 id="minutes">30:00</h2>
-      </div>
+
+
+    <div class="container"> 
+        <div id="time">
+            <h2 id="minutes">25:00</h2>
+        </div>
+    </div>
+     
+    
 
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
