--- a/pages/login.html
+++ b/pages/login.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Login Page</title>
+    </head>
 
+    <body> 
+        <h1> Welcome Back! </h1>
+        <h2> we've missed you! </h2>
+     <form action="/action_page.php">
+        <label for="username">Username :</label>
+        <input type="text" id="username" name="username"><br><br>
+        <label for="password">Password :</label>
+        <input type="text" id="password" name="password"><br><br>
+        <input type="submit" value="Submit">
+    </form>
+
+    <p> don't have an account? </p>
+    <form action = "/action_page.php">
+        <input type="started" value="Let's get started!"> 
+    </form>
+    </body>
+
+</html>
