--- a/pages/insights.html
+++ b/pages/insights.html
@@ -8,18 +8,23 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 <body>
+
     <header id = "header">
+        
         <a href="index.html" id="home-btn">
             <i class="fas fa-paw"style="font-size:40px"></i>
-            <h1> PAWMODORO </h1>
+            <h1> <a href="index.html"> pawmodoro </a> </h1>
         </a>
+
         <img id="header-img"> 
+        
         <nav id="nav-bar"> 
-            <ul> 
+            <ul>                 
                 <li> <a href="insights.html" class="nav-link"> Insights </a> </li>
             </ul>
             <button id="login-btn"> Login </button>
         </nav>
+
     </header>
 </body>
 </html>
