--- a/pages/index.html
+++ b/pages/index.html
@@ -19,11 +19,12 @@
         
         <div id="nav-bar"> 
             <ul> 
-                <li> <a href="insights.html" class="nav-link"> Tasks </a> </li>
-                <li> <a href="#" class="nav-link"> Profile </a> </li>
+                <li> <a href="index.html" class="nav-link"> TIMER </a></li>
+                <li> <a href="insights.html" class="nav-link"> TASKS </a> </li>
+                <li> <a href="#" class="nav-link"> PROFILE </a> </li>
 
             </ul>
-            <button id="login-btn"> <p> Login </p> </button>
+            <button id="login-btn"> <p> LOGIN </p> </button>
         </div>
 
     </header>
