--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
         <div id="nav-bar"> 
             <ul> 
                 <li> <a href="index.html" class="nav-link"> TIMER </a></li>
-                <li> <a href="#" class="nav-link"> TASKS </a> </li>
+                <li> <a href="#task" class="nav-link"> TASKS </a> </li>
                 <li> <a href="#" class="nav-link"> PROFILE </a> </li>
             </ul>
             <button id="login-btn"> <a href="login.html"> <p> LOGIN </p> </a> </button>
@@ -51,6 +51,19 @@
             <p id="curr-task"> task: statistics hw </p>
             <p id="next-task"> upcoming task: geology lab</p>
         </div>
+
+        <br> <br>
+
+        <section id="task">
+            <h1 class="task-heading"> add tasks </h1>
+            <input type="text" id="task-input" placeholder="What do you need to do today?">
+            <form id="task-list">
+                <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
+                <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
+                <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
+                <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
+            </form>
+        </section>
 
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
