--- a/pages/login.html
+++ b/pages/login.html
@@ -34,15 +34,14 @@
         </div>
             <form action="/action_page.php" id="sign-in-form">
                 <input type="text" id="username" placeholder="Username">
-                
-                 <input type="text" id="password" placeholder="Password">
+                <input type="text" id="password" placeholder="Password">
 
                 <button id="sign-in-btn"> Sign In </button>
 
                 <p> or </p>
                 <p> don't have an account? </p>
 
-                <button id="started-btn"> <p> Let's get started! </p> </button> 
+                <button id="started-btn"> Let's get started! </button> 
              </form>
     </body>
 </html>
