Updated login.html links

--- a/pages/login.html
+++ b/pages/login.html
@@ -19,7 +19,7 @@
             <div id="nav-bar"> 
                 <ul> 
                     <li> <a href="index.html" class="nav-link"> TIMER </a></li>
-                    <li> <a href="insights.html" class="nav-link"> TASKS </a> </li>
+                    <li> <a href="index.html#task" class="nav-link"> TASKS </a> </li>
                     <li> <a href="#" class="nav-link"> PROFILE </a> </li>
     
                 </ul>
