--- a/pages/index.html
+++ b/pages/index.html
@@ -60,6 +60,11 @@
                 <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
                 <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
                 <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
+                <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
+                <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
+                <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
+                <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
+                <input type="radio"> <label> Lorem ipsum dolor sit amet. </label> <br>
             </form>
         </section>
 
